src/com/nnero/njson/parse/json.grammar
#json的文法
grammar:json

@token:
    L_BRACE '{'
    R_BRACE '}'
    L_BRACKET '['
    R_BRACKET ']'
    NUMBER \d+ #正则
    NULL null
    TRUE true
    FALSE false
    COMMA ','
    COLON ':'
    QUOT '\"'
    STRING \".+\" #正则
@end

@rules:

    json : obj
         | arr
         ;

    obj : L_BRACE maps R_BRACE
        ;

    objs : obj
         | obj COMMA objs
         ;

    arr : L_BRACKET objs R_BRACKET
        | L_BRACKET numbers R_BRACKET
        | L_BRACKET booleans R_BRACKET
        | L_BRACKET strings R_BRACKET
        ;

    maps : map
         | map COMMA maps
         ;

    map : STRING COLON STRING
        | STRING COLON NUMBER
        | STRING COLON TRUE
        | STRING COLON FALSE
        | STRING COLON NULL
        | STRING COLON arr
        ;

    numbers : NUMBER
            | NUMBER COMMA numbers
            ;

    boolean : TRUE
            | FALSE
            ;

    booleans : boolean
             | boolean COMMA booleans
             ;

    strings : STRING
            | STRING COMMA strings
            ;
@end
